infra/kubernetes/keycloak/deployment-patch-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  template:
    spec:
      containers:
        - name: keycloak
          args: ["start-dev", "--import-realm"]
          volumeMounts:
          - name: configmap-realm-volume
            mountPath: /opt/keycloak/data/import
      volumes:
        - name: configmap-realm-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: configmap-realm
