infra/kubernetes/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    # Create this clusterissuer on your own!
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
    host: keycloak.aks.thinkbox.pl
  tls:
  - hosts:
    - keycloak.aks.thinkbox.pl
    secretName: keycloak-aks-thinkbox-pl-cert
